--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -524,11 +524,12 @@
         "button": "अभी आवेदन करें"
       }
     },
+  
       "services": {
-        "title": "मूल्यवर्धित सेवाएं",
-        "subtitle": "सोने के लोन से परे - आपकी आवश्यकताओं के लिए व्यापक वित्तीय समाधान",
-        "learnMore": "अधिक जानें",
-        "insurance": {
+        "title": "हमारी मूल्य वर्धित सेवाएँ",
+        "subtitle": "आपके भविष्य को सशक्त बनाने के लिए डिज़ाइन की गई हमारी वित्तीय सेवाओं की रेंज का अन्वेषण करें।",
+        "learnMore": "और जानें",
+       "insurance": {
           "title": "बीमा सेवाएं",
           "description": "चोरी, क्षति या हानि के विरुद्ध आपके गिरवी रखे सोने और कीमती सामान की पूर्ण सुरक्षा",
           "features": [
@@ -556,15 +557,230 @@
           ]
         },
         "cta": {
-          "title": "अपने वित्तीय भविष्य को सुरक्षित करने के लिए तैयार हैं?",
-          "subtitle": "व्यापक वित्तीय समाधानों के बारे में आज ही हमारे विशेषज्ञों से बात करें",
-          "button": "परामर्श बुक करें"
+          "title": "अपने वित्तीय भविष्य को बदलने के लिए तैयार हैं?",
+          "subtitle": "हजारों संतुष्ट ग्राहकों में शामिल हों और आज अपनी यात्रा शुरू करें।",
+          "getStarted": "आज शुरू करें",
+          "speakAdvisor": "हमारे सलाहकार से बात करें",
+          "visitBranch": "अपनी निकटतम शाखा पर जाएँ"
         }
+      },
+      "whyChoose": {
+        "title": "हमारी मूल्य वर्धित सेवाएँ क्यों चुनें?",
+        "trusted": "पारदर्शी प्रक्रियाओं के साथ विश्वसनीय भागीदार",
+        "competitive": "प्रतिस्पर्धी ब्याज दरें और आसान शर्तें",
+        "digital": "डिजिटल-प्रथम और शाखा समर्थन",
+        "oneStop": "एकमात्र वित्तीय समाधान केंद्र"
+      },
+      "testimonials": {
+        "title": "ग्राहक सफलता की कहानियाँ",
+        "0": {
+          "name": "जॉन डो",
+          "feedback": "बीमा योजना मेरे परिवार की सुरक्षा के लिए गेम-चेंजर थी।",
+          "highlight": "अनुकूलित योजनाओं के साथ प्रीमियम पर 30% की बचत की।"
+        },
+        "1": {
+          "name": "जेन स्मिथ",
+          "feedback": "धन प्रबंधन सेवा ने मेरी सेवानिवृत्ति की योजना बनाने में मदद की।",
+          "highlight": "निवेश पर 12% वार्षिक रिटर्न प्राप्त किया।"
+        }
+      },
+      "faqs": {
+        "title": "अक्सर पूछे जाने वाले प्रश्न",
+        "0": {
+          "question": "इन सेवाओं के लिए आवेदन करने के लिए किन दस्तावेजों की आवश्यकता है?",
+          "answer": "आपको पहचान प्रमाण, पता प्रमाण और आय दस्तावेजों की आवश्यकता है।"
+        },
+        "1": {
+          "question": "इन सेवाओं के लिए कौन पात्र है?",
+          "answer": "18 वर्ष से अधिक आयु के व्यक्ति जिनके पास वैध बैंक खाता है, पात्र हैं।"
+        },
+        "2": {
+          "question": "इन सेवाओं के क्या लाभ हैं?",
+          "answer": "वे वित्तीय सुरक्षा, विकास और विशेषज्ञ मार्गदर्शन प्रदान करते हैं।"
+        }
+      },
+      "contact": {
+        "title": "संपर्क करें",
+        "phone": {
+          "title": "हमें कॉल करें",
+          "number": "+91-800-123-4567"
+        },
+        "email": {
+          "title": "हमें ईमेल करें",
+          "address": "support@financeapp.com"
+        },
+        "requestCallback": "कॉलबैक का अनुरोध करें",
+        "callbackDescription": "हमारी टीम 24 घंटे के भीतर संपर्क करेगी।",
+        "bookAppointment": "अपॉइंटमेंट बुक करें"
       }
     
-  
+,"testiment": {
+      "title": "हमारे ग्राहक क्या कहते हैं",
+      "subtitle": "हमारे मूल्यवान ग्राहकों से उनकी सेवाओं के अनुभव के बारे में सुनें।",
+      "client1": {
+        "name": "जॉन डो",
+        "designation": "सीईओ, टेककॉर्प",
+        "quote": "टीम ने असाधारण परिणाम दिए, उनकी व्यावसायिकता और विशेषज्ञता के साथ हमारी अपेक्षाओं को पार किया।"
+      },
+      "client2": {
+        "name": "जेन स्मिथ",
+        "designation": "मार्केटिंग डायरेक्टर, इनोवेट लिमिटेड",
+        "quote": "उनके नवाचारी समाधानों ने हमारे व्यवसाय को बदल दिया, जिससे महत्वपूर्ण वृद्धि और जुड़ाव हुआ।"
+      },
+      "client3": {
+        "name": "राहुल शर्मा",
+        "designation": "संस्थापक, स्टार्टअप हब",
+        "quote": "उनके साथ काम करना एक गेम-चेंजर था; उनकी समर्पण और रचनात्मकता बेजोड़ है।"
+      }
+    }
 
-              
+
+  
+    ,
+      "contact": {
+        "heroTitle": "हम यहाँ आपकी मदद के लिए हैं",
+        "heroSubtitle": "गोल्ड लोन सेवाओं के बारे में किसी भी प्रश्न के लिए हमसे संपर्क करें",
+        "formTitle": "हमें संदेश भेजें",
+        "name": "पूरा नाम",
+        "phone": "फोन नंबर",
+        "email": "ईमेल पता",
+        "city": "शहर",
+        "inquiryType": "पूछताछ का प्रकार",
+        "selectOption": "एक विकल्प चुनें",
+        "goldLoan": "गोल्ड लोन जानकारी",
+        "emi": "ईएमआई/भुगतान प्रश्न",
+        "repayment": "लोन चुकौती",
+        "branchInfo": "शाखा जानकारी",
+        "others": "अन्य प्रश्न",
+        "message": "आपका संदेश",
+        "notRobot": "मैं रोबोट नहीं हूँ",
+        "submit": "संदेश भेजें",
+        "callSupport": "24/7 ग्राहक सहायता",
+        "workingHours": "कार्य समय",
+        "languageSupport": "भाषा समर्थन उपलब्ध",
+        "chatOnWhatsApp": "WhatsApp पर हमसे चैट करें",
+        "emailSupport": "ईमेल सहायता",
+        "generalInquiries": "सामान्य पूछताछ",
+        "loanRepayment": "लोन चुकौती",
+        "complaints": "शिकायतें/सुझाव",
+        "branchLocator": "अपने नजदीकी शाखा ढूंढें",
+        "state": "राज्य",
+        "selectState": "राज्य चुनें",
+        "district": "जिला",
+        "selectDistrict": "जिला चुनें",
+        "findBranches": "शाखाएं ढूंढें",
+        "availableBranches": "उपलब्ध शाखाएं",
+        "timings": "समय",
+        "mapPlaceholder": "यहां शाखा स्थानों के साथ मानचित्र दिखाई देगा",
+        "faqTitle": "अक्सर पूछे जाने वाले प्रश्न",
+        "faq1": {
+          "question": "गोल्ड लोन के लिए मुझे कौन से दस्तावेज चाहिए?",
+          "answer": "आपको अपना आईडी प्रूफ (आधार, पैन, वोटर आईडी), पता प्रूफ और शुद्धता प्रमाणपत्र के साथ सोने के गहने चाहिए।"
+        },
+        "faq2": {
+          "question": "लोन स्वीकृति में कितना समय लगता है?",
+          "answer": "दस्तावेज़ सत्यापन और सोने के मूल्यांकन के बाद 30 मिनट के भीतर हमारे गोल्ड लोन स्वीकृत हो जाते हैं।"
+        },
+        "faq3": {
+          "question": "क्या मैं अपना लोन जल्दी चुका सकता हूँ?",
+          "answer": "हां, आप नियत तिथि से पहले कभी भी अपना लोन चुका सकते हैं। हम जल्दी चुकौती पर ब्याज छूट प्रदान करते हैं।"
+        },
+        "viewAllFAQs": "सभी एफएक्यू देखें",
+        "connectWithUs": "हमसे जुड़ें",
+        "corporateOffice": "कॉर्पोरेट कार्यालय",
+        "officeHours": "कार्यालय समय",
+        "downloadBranchList": "पूरी शाखा सूची डाउनलोड करें (PDF)",
+        "scheduleCallback": "कॉलबैक अनुरोध करें",
+        "preferredDate": "पसंदीदा तिथि",
+        "preferredTime": "पसंदीदा समय",
+        "selectTime": "समय स्लॉट चुनें",
+        "scheduleNow": "अभी शेड्यूल करें"
+      }
+    
+        
+      
+      ,"hero": {
+      "title": "हमारी यात्रा",
+      "subtitle": "यूनिगोल्ड फाइनेंस की विरासत को जानें, जो सोने के ऋण सेवाओं में विश्वास और उत्कृष्टता पर आधारित है।"
+    },
+    "overview": {
+      "title": "यूनिगोल्ड फाइनेंस के बारे में",
+      "description": "2005 में स्थापित, यूनिगोल्ड फाइनेंस सोने के ऋण सेवाओं में एक भरोसेमंद नाम बन गया है, जो लाखों लोगों को सुलभ और पारदर्शी वित्तीय समाधानों के साथ सशक्त बनाता है। ग्राहक संतुष्टि के प्रति प्रतिबद्धता के साथ, हमने पूरे भारत में विस्तार किया है, परंपरा को नवाचार के साथ जोड़ते हुए।"
+    },
+    "timeline": {
+      "title": "महत्वपूर्ण पड़ाव",
+      "milestone1": {
+        "title": "यूनिगोल्ड फाइनेंस की स्थापना",
+        "description": "मुंबई में पहली शाखा स्थापित की, समुदायों को सशक्त बनाने के लिए सुलभ सोने के ऋण शुरू किए।"
+      },
+      "milestone2": {
+        "title": "50 शाखाओं तक विस्तार",
+        "description": "भारत भर में 50 शाखाओं तक पहुंचे, शहरी और ग्रामीण क्षेत्रों में अपनी उपस्थिति को मजबूत किया।"
+      },
+      "milestone3": {
+        "title": "उत्कृष्टता पुरस्कार",
+        "description": "उत्कृष्ट ग्राहक सेवा और नवाचार के लिए राष्ट्रीय वित्त पुरस्कार प्राप्त किया।"
+      },
+      "milestone4": {
+        "title": "डिजिटल परिवर्तन",
+        "description": "ऑनलाइन ऋण आवेदन और ग्राहक पोर्टल शुरू किए, जिससे पहुंच में वृद्धि हुई।"
+      }
+    },
+    "gallery": {
+      "title": "हमारा इतिहास चित्रों में",
+      "image1": { "alt": "मुंबई में पहली शाखा का उद्घाटन" },
+      "image2": { "alt": "2015 में राष्ट्रीय वित्त पुरस्कार प्राप्त करना" },
+      "image3": { "alt": "2020 में ग्राहक प्रशंसा कार्यक्रम" }
+    },
+    "mission": {
+      "title": "हमारा मिशन और मूल्य",
+      "value1": {
+        "title": "विश्वास",
+        "description": "पारदर्शिता और विश्वसनीयता के माध्यम से दीर्घकालिक संबंध बनाना।"
+      },
+      "value2": {
+        "title": "ग्राहक केंद्रित",
+        "description": "ग्राहकों की जरूरतों को अनुकूलित समाधानों के साथ प्राथमिकता देना।"
+      },
+      "value3": {
+        "title": "नवाचार",
+        "description": "निर्बाध वित्तीय सेवाएं प्रदान करने के लिए प्रौद्योगिकी को अपनाना।"
+      }
+    },
+    "stats": {
+      "title": "हमारा प्रभाव",
+      "customers": { "value": "10 लाख+", "label": "सेवा प्राप्त ग्राहक" },
+      "branches": { "value": "100+", "label": "राष्ट्रव्यापी शाखाएं" },
+      "loans": { "value": "5 लाख+", "label": "वितरित ऋण" }
+    }
             
+,"history": {
+    "title": "हमारी यात्रा",
+    "founding": {
+      "year": "2023",
+      "title": "यूनीगोल्ड की स्थापना",
+      "description": "यूनीगोल्ड फाइनेंस कंपनी की स्थापना ओडिशा के लोगों को सस्ते सोने के ऋण प्रदान करने के विजन के साथ की गई थी। हमारी पहली शाखा समर्पित पेशेवरों की एक छोटी टीम के साथ भुवनेश्वर में खोली गई थी।"
+    },
+    "milestone1": {
+      "year": "2024",
+      "title": "पहला प्रमुख मील का पत्थर",
+      "description": "सोने के ऋण में ₹100 करोड़ का आंकड़ा पार किया। ओडिशा भर में 5 शाखाओं का विस्तार किया, सोने के ऋण में एक विश्वसनीय नाम बन गया।"
+    },
+    "expansion": {
+      "year": "2024",
+      "title": "राज्यव्यापी विस्तार",
+      "description": "लचीले पुनर्भुगतान विकल्पों के साथ हमारे अभिनव सोने के ऋण उत्पाद लॉन्च किए। ओडिशा के सभी 30 जिलों में विस्तार किया।"
+    },
+    "present": {
+      "year": "वर्तमान",
+      "title": "अग्रणी गोल्ड लोन प्रदाता",
+      "description": "आज, यूनीगोल्ड ओडिशा की सबसे विश्वसनीय गोल्ड लोन कंपनी है जिसकी 50 से अधिक शाखाएँ हैं। हम अपने मूल मूल्यों को बनाए रखते हुए ग्राहक-केंद्रित उत्पादों के साथ नवाचार करना जारी रखते हैं।"
+    },
+    "achievements": "हमारी उपलब्धियां",
+    "branches": "ओडिशा में शाखाएं",
+    "customers": "संतुष्ट ग्राहक",
+    "loans": "सोने के ऋण वितरित"
+  }
+
   
 }
