--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -524,9 +524,10 @@
         "button": "ବର୍ତ୍ତମାନ ଆବେଦନ କରନ୍ତୁ"
       }
     },
+    
       "services": {
-        "title": "ମୂଲ୍ୟବର୍ଦ୍ଧିତ ସେବାଗୁଡ଼ିକ",
-        "subtitle": "ସୁନା ଋଣ ବାହାରେ - ଆପଣଙ୍କର ଆବଶ୍ୟକତା ପାଇଁ ସମ୍ପୂର୍ଣ୍ଣ ଆର୍ଥିକ ସମାଧାନ",
+        "title": "ଆମର ମୂଲ୍ୟ ଯୋଗ ସେବାଗୁଡ଼ିକ",
+        "subtitle": "ଆପଣଙ୍କ ଭବିଷ୍ୟତକୁ ସଶକ୍ତ କରିବା ପାଇଁ ଡିଜାଇନ୍ କରାଯାଇଥିବା ଆମର ଆର୍ଥିକ ସେବାଗୁଡ଼ିକର ପରିସରକୁ ଅନୁସନ୍ଧାନ କରନ୍ତୁ।",
         "learnMore": "ଅଧିକ ଜାଣନ୍ତୁ",
         "insurance": {
           "title": "ବିମା ସେବା",
@@ -556,14 +557,228 @@
           ]
         },
         "cta": {
-          "title": "ଆପଣଙ୍କର ଆର୍ଥିକ ଭବିଷ୍ୟତକୁ ସୁରକ୍ଷିତ କରିବାକୁ ପ୍ରସ୍ତୁତ କି?",
-          "subtitle": "ସମ୍ପୂର୍ଣ୍ଣ ଆର୍ଥିକ ସମାଧାନ ବିଷୟରେ ଆଜି ଆମ ବିଶେଷଜ୍ଞଙ୍କ ସହିତ କଥା ହୁଅନ୍ତୁ",
-          "button": "ପରାମର୍ଶ ବୁକ୍ କରନ୍ତୁ"
+          "title": "ଆପଣଙ୍କ ଆର୍ଥିକ ଭବିଷ୍ୟତକୁ ରୂପାନ୍ତର କରିବାକୁ ପ୍ରସ୍ତୁତ କି?",
+          "subtitle": "ହଜାରେ ସନ୍ତୁଷ୍ଟ ଗ୍ରାହକଙ୍କ ସହ ଯୋଗ ଦିଅନ୍ତୁ ଏବଂ ଆଜି ଆପଣଙ୍କ ଯାତ୍ରା ଆରମ୍ଭ କରନ୍ତୁ।",
+          "getStarted": "ଆଜି ଆରମ୍ଭ କରନ୍ତୁ",
+          "speakAdvisor": "ଆମର ପରାମରْଶଦାତାଙ୍କ ସହ କଥା ହୁଅନ୍ତୁ",
+          "visitBranch": "ଆପଣଙ୍କ ନିକଟତମ ଶାଖାକୁ ପରିଦର୍ଶନ କରନ୍ତୁ"
         }
+      },
+      "whyChoose": {
+        "title": "ଆମର ମୂଲ୍ୟ ଯୋଗ ସେବାଗୁଡ଼ିକ କାହିଁକି ବାଛନ୍ତୁ?",
+        "trusted": "ପାରଦର୍ଶୀ ପ୍ରକ୍ରିୟା ସହିତ ବିଶ୍ୱସନୀୟ ଅଂଶୀଦାର",
+        "competitive": "ପ୍ରତିଯୋଗୀ ସୁଧ ହାର ଏବଂ ସହଜ ସର୍ତ୍ତାବଳୀ",
+        "digital": "ଡିଜିଟାଲ୍-ପ୍ରଥମ ଏବଂ ଶାଖା ସମର୍ଥନ",
+        "oneStop": "ଏକମାତ୍ର ଆର୍ଥିକ ସମାଧାନ ହବ୍"
+      },
+      "testimonials": {
+        "title": "ଗ୍ରାହକ ସଫଳତା କାହାଣୀ",
+        "0": {
+          "name": "ଜନ୍ ଡୋ",
+          "feedback": "ବୀମା ଯୋଜନା ମୋ ପରିବାରର ସୁରକ୍ଷା ପାଇଁ ଏକ ଗେମ୍-ଚେଞ୍ଜର ଥିଲା।",
+          "highlight": "କଷ୍ଟମାଇଜ୍ଡ ଯୋଜନା ସହିତ ପ୍ରିମିୟମ୍ ଉପରେ 30% ସଞ୍ଚୟ କଲି।"
+        },
+        "1": {
+          "name": "ଜେନ୍ ସ୍ମିଥ",
+          "feedback": "ସମ୍ପତ୍ତି ପରିଚାଳନା ସେବା ମୋତେ ମୋ ଅବସର ଯୋଜନା କରିବାରେ ସାହାଯ୍ୟ କଲା।",
+          "highlight": "ନିବେଶ ଉପରେ 12% ବାର୍ଷିକ ରିଟର୍ନ ହାସଲ କଲି।"
+        }
+      },
+      "faqs": {
+        "title": "ପ୍ରାୟତଃ ପଚରାଯାଉଥିବା ପ୍ରଶ୍ନ",
+        "0": {
+          "question": "ଏହି ସେବାଗୁଡ଼ିକ ପାଇଁ ଆବେଦନ କରିବା ପାଇଁ କେଉଁ ଦଲିଲ ଆବଶ୍ୟକ?",
+          "answer": "ଆପଣଙ୍କୁ ପରିଚୟ ପ୍ରମାଣ, ଠିକଣା ପ୍ରମାଣ ଏବଂ ଆୟ ଦଲିଲ ଆବଶ୍ୟକ।"
+        },
+        "1": {
+          "question": "ଏହି ସେବାଗୁଡ଼ିକ ପାଇଁ କିଏ ଯୋଗ୍ୟ?",
+          "answer": "18 ବର୍ଷରୁ ଅଧିକ ବୟସର ବ୍ୟକ୍ତି ଯାହାଙ୍କର ବୈଧ ବ୍ୟାଙ୍କ ଆକାଉଣ୍ଟ ଅଛି, ଯୋଗ୍ୟ ଅଟନ୍ତି।"
+        },
+        "2": {
+          "question": "ଏହି ସେବାଗୁଡ଼ିକର ଲାଭ କ’ଣ?",
+          "answer": "ଏହା ଆର୍ଥିକ ସୁରକ୍ଷା, ବୃଦ୍ଧି ଏବଂ ବିଶେଷଜ୍ଞ ମାର୍ଗଦର୍ଶନ ପ୍ରଦାନ କରେ।"
+        }
+      },
+      "contact": {
+        "title": "ସମ୍ପର୍କ କରନ୍ତୁ",
+        "phone": {
+          "title": "ଆମକୁ କଲ୍ କରନ୍ତୁ",
+          "number": "+91-800-123-4567"
+        },
+        "email": {
+          "title": "ଆମକୁ ଇମେଲ୍ କରନ୍ତୁ",
+          "address": "support@financeapp.com"
+        },
+        "requestCallback": "କଲବ୍ୟାକ୍ ଅନୁରୋଧ କରନ୍ତୁ",
+        "callbackDescription": "ଆମର ଟିମ୍ 24 ଘଣ୍ଟା ମଧ୍ୟରେ ସମ୍ପର୍କ କରିବ।",
+        "bookAppointment": "ଆପଣଙ୍କ ସମୟ ବୁକ୍ କରନ୍ତୁ"
       }
     
+    ,"testiment": {
+      "title": "ଆମର ଗ୍ରାହକମାନେ କ’ଣ କହନ୍ତି",
+      "subtitle": "ଆମର ମୂଲ୍ୟବାନ ଗ୍ରାହକମାନଙ୍କଠାରୁ ସେମାନଙ୍କର ସେବା ଅନୁଭବ ବିଷୟରେ ଶୁଣନ୍ତୁ।",
+      "client1": {
+        "name": "ଜନ ଡୋ",
+        "designation": "ସିଇଓ, ଟେକକର୍ପ",
+        "quote": "ଦଳଟି ଅସାଧାରଣ ଫଳାଫଳ ପ୍ରଦାନ କଲା, ସେମାନଙ୍କର ପ୍ରଫେସନାଲିଜମ ଏବଂ ବିଶେଷଜ୍ଞତା ସହିତ ଆମର ଆଶାକୁ ଅତିକ୍ରମ କଲେ।"
+      },
+      "client2": {
+        "name": "ଜେନ ସ୍ମିଥ",
+        "designation": "ମାର୍କେଟିଂ ନିର୍ଦ୍ଦେଶକ, ଇନୋଭେଟ ଲିମିଟେଡ",
+        "quote": "ସେମାନଙ୍କର ନୂତନ ସମାଧାନଗୁଡ଼ିକ ଆମର ବ୍ୟବସାୟକୁ ରୂପାନ୍ତର କଲା, ଯାହା ଗୁରୁତ୍ୱପୂର୍ଣ୍ଣ ବୃଦ୍ଧି ଏବଂ ସଂନାଦ ଆଣିଲା।"
+      },
+      "client3": {
+        "name": "ରାହୁଲ ଶର୍ମା",
+        "designation": "ପ୍ରତିଷ୍ଠାତା, ଷ୍ଟାର୍ଟଅପ ହବ",
+        "quote": "ସେମାନଙ୍କ ସହ କାମ କରିବା ଏକ ଗେମ-ଚେଞ୍ଜର ଥିଲା; ସେମାନଙ୍କର ନିଷ୍ଠା ଏବଂ ସୃଜନଶୀଳତା ଅତୁଳନୀୟ।"
+      }
+    }
   
 
-                
+
+    ,
+      "contact": {
+        "heroTitle": "ଆମେ ଆପଣଙ୍କ ସହାୟତା ପାଇଁ ଉପସ୍ଥିତ",
+        "heroSubtitle": "ସୁନା ଋଣ ସେବା ସମ୍ବନ୍ଧୀୟ କୌଣସି ପ୍ରଶ୍ନ ପାଇଁ ଆମ ସହିତ ଯୋଗାଯୋଗ କରନ୍ତୁ",
+        "formTitle": "ଆମକୁ ଏକ ସନ୍ଦେଶ ପଠାନ୍ତୁ",
+        "name": "ପୂର୍ଣ୍ଣ ନାମ",
+        "phone": "ଫୋନ୍ ନମ୍ବର",
+        "email": "ଇମେଲ୍ ଠିକଣା",
+        "city": "ସହର",
+        "inquiryType": "ପ୍ରଶ୍ନର ପ୍ରକାର",
+        "selectOption": "ଏକ ବିକଳ୍ପ ବାଛନ୍ତୁ",
+        "goldLoan": "ସୁନା ଋଣ ସୂଚନା",
+        "emi": "ଇଏମଆଇ/ଦେୟ ପ୍ରଶ୍ନ",
+        "repayment": "ଋଣ ଫେରସ୍ତ",
+        "branchInfo": "ଶାଖା ସୂଚନା",
+        "others": "ଅନ୍ୟାନ୍ୟ ପ୍ରଶ୍ନ",
+        "message": "ଆପଣଙ୍କର ସନ୍ଦେଶ",
+        "notRobot": "ମୁଁ ଏକ ରୋବଟ୍ ନୁହେଁ",
+        "submit": "ସନ୍ଦେଶ ପଠାନ୍ତୁ",
+        "callSupport": "24/7 ଗ୍ରାହକ ସହାୟତା",
+        "workingHours": "କାର୍ଯ୍ୟ ସମୟ",
+        "languageSupport": "ଭାଷା ସମର୍ଥନ ଉପଲବ୍ଧ",
+        "chatOnWhatsApp": "WhatsApp ରେ ଆମ ସହିତ ଚାଟ୍ କରନ୍ତୁ",
+        "emailSupport": "ଇମେଲ୍ ସହାୟତା",
+        "generalInquiries": "ସାଧାରଣ ପ୍ରଶ୍ନ",
+        "loanRepayment": "ଋଣ ଫେରସ୍ତ",
+        "complaints": "ଅଭିଯୋଗ/ପରାମର୍ଶ",
+        "branchLocator": "ଆପଣଙ୍କ ନିକଟତମ ଶାଖା ଖୋଜନ୍ତୁ",
+        "state": "ରାଜ୍ୟ",
+        "selectState": "ରାଜ୍ୟ ବାଛନ୍ତୁ",
+        "district": "ଜିଲ୍ଲା",
+        "selectDistrict": "ଜିଲ୍ଲା ବାଛନ୍ତୁ",
+        "findBranches": "ଶାଖା ଖୋଜନ୍ତୁ",
+        "availableBranches": "ଉପଲବ୍ଧ ଶାଖାଗୁଡିକ",
+        "timings": "ସମୟ",
+        "mapPlaceholder": "ଶାଖା ସ୍ଥାନ ସହିତ ମାନଚିତ୍ର ଏଠାରେ ଦେଖାଯିବ",
+        "faqTitle": "ଅଧିକ ପଚରାଯାଉଥିବା ପ୍ରଶ୍ନ",
+        "faq1": {
+          "question": "ସୁନା ଋଣ ପାଇଁ ମୋତେ କେଉଁ ଦସ୍ତାବିଜ୍ ଆବଶ୍ୟକ?",
+          "answer": "ଆପଣଙ୍କୁ ଆପଣଙ୍କର ପରିଚୟ ପ୍ରମାଣ (ଆଧାର, PAN, ଭୋଟର୍ ଆଇଡି), ଠିକଣା ପ୍ରମାଣ ଏବଂ ଶୁଦ୍ଧତା ପ୍ରମାଣପତ୍ର ସହିତ ସୁନା ଅଳଙ୍କାର ଆବଶ୍ୟକ।"
+        },
+        "faq2": {
+          "question": "ଋଣ ସ୍ୱୀକୃତି ପାଇଁ କେତେ ସମୟ ଲାଗେ?",
+          "answer": "ଦସ୍ତାବିଜ୍ ଯାଞ୍ଚ ଏବଂ ସୁନା ମୂଲ୍ୟାଙ୍କନ ପରେ 30 ମିନିଟ୍ ମଧ୍ୟରେ ଆମର ସୁନା ଋଣ ସ୍ୱୀକୃତ ହୋଇଯାଏ।"
+        },
+        "faq3": {
+          "question": "ମୁଁ ମୋ ଋଣ ପୂର୍ବରୁ ଫେରସ୍ତ କରିପାରିବି କି?",
+          "answer": "ହଁ, ଆପଣ ନିର୍ଦ୍ଧାରିତ ତାରିଖ ପୂର୍ବରୁ ଯେକୌଣସି ସମୟରେ ଆପଣଙ୍କର ଋଣ ଫେରସ୍ତ କରିପାରିବେ। ଆମେ ପୂର୍ବ ଫେରସ୍ତ ପାଇଁ ସୁଧ ରିହାତି ପ୍ରଦାନ କରୁ।"
+        },
+        "viewAllFAQs": "ସମସ୍ତ FAQ ଦେଖନ୍ତୁ",
+        "connectWithUs": "ଆମ ସହିତ ଯୋଗାଯୋଗ କରନ୍ତୁ",
+        "corporateOffice": "କର୍ପୋରେଟ୍ କାର୍ଯ୍ୟାଳୟ",
+        "officeHours": "କାର୍ଯ୍ୟାଳୟ ସମୟ",
+        "downloadBranchList": "ସମ୍ପୂର୍ଣ୍ଣ ଶାଖା ତାଲିକା ଡାଉନଲୋଡ୍ କରନ୍ତୁ (PDF)",
+        "scheduleCallback": "ଏକ କଲବ୍ୟାକ୍ ଅନୁରୋଧ କରନ୍ତୁ",
+        "preferredDate": "ପସନ୍ଦିତ ତାରିଖ",
+        "preferredTime": "ପସନ୍ଦିତ ସମୟ",
+        "selectTime": "ସମୟ ସ୍ଲଟ୍ ବାଛନ୍ତୁ",
+        "scheduleNow": "ବର୍ତ୍ତମାନ ଯୋଜନା କରନ୍ତୁ"
+      }
+    
+         
+      
+      ,"hero": {
+      "title": "ଆମର ଯାତ୍ରା",
+      "subtitle": "ସୁନା ଋଣ ସେବାରେ ବିଶ୍ୱାସ ଏବଂ ଉତ୍କର୍ଷତା ଉପରେ ନିର୍ମିତ ଯୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସର ଐତିହ୍ୟ ଆବିଷ୍କାର କରନ୍ତୁ।"
+    },
+    "overview": {
+      "title": "ଯୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସ ବିଷୟରେ",
+      "description": "୨୦୦୫ ମସିହାରେ ପ୍ରତିଷ୍ଠିତ, ଯୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସ ସୁନା ଋଣ ସେବାରେ ଏକ ବିଶ୍ୱସ୍ତ ନାମ ହୋଇପାରିଛି, ଲକ୍ଷ ଲକ୍ଷ ଲୋକଙ୍କୁ ସୁଲଭ ଏବଂ ପାରଦର୍ଶୀ ଆର୍ଥିକ ସମାଧାନ ସହିତ ସଶକ୍ତ କରୁଛି। ଗ୍ରାହକ ସନ୍ତୁଷ୍ଟି ପ୍ରତି ପ୍ରତିବଦ୍ଧତା ସହିତ, ଆମେ ପୁରା ଭାରତରେ ବିସ୍ତାର କରିଛୁ, ପାରମ୍ପରିକତାକୁ ନବସୃଜନ ସହିତ ମିଶ୍ରଣ କରି।"
+    },
+    "timeline": {
+      "title": "ମାଇଲଷ୍ଟୋନ",
+      "milestone1": {
+        "title": "ଯୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସ ପ୍ରତିଷ୍ଠା",
+        "description": "ମୁମ୍ବାଇରେ ପ୍ରଥମ ଶାଖା ପ୍ରତିଷ୍ଠା କରାଗଲା, ସମୁଦାୟଙ୍କୁ ସଶକ୍ତ କରିବା ପାଇଁ ସୁଲଭ ସୁନା ଋଣ ଆରମ୍ଭ କରାଗଲା।"
+      },
+      "milestone2": {
+        "title": "୫୦ଟି ଶାଖାକୁ ବିସ୍ତାର",
+        "description": "ଭାରତରେ ୫୦ଟି ଶାଖା ପର୍ଯ୍ୟନ୍ତ ପହଞ୍ଚିଲୁ, ସହରୀ ଏବଂ ଗ୍ରାମୀଣ ଅଞ୍ଚଳରେ ଆମର ଉପସ୍ଥିତିକୁ ମଜବୁତ କଲୁ।"
+      },
+      "milestone3": {
+        "title": "ଉତ୍କର୍ଷତା ପୁରସ୍କାର",
+        "description": "ଉତ୍କୃଷ୍ଟ ଗ୍ରାହକ ସେବା ଏବଂ ନବସୃଜନ ପାଇଁ ଜାତୀୟ ଆର୍ଥିକ ପୁରସ୍କାର ଗ୍ରହଣ କଲୁ।"
+      },
+      "milestone4": {
+        "title": "ଡିଜିଟାଲ ରୂପାନ୍ତର",
+        "description": "ଅନଲାଇନ ଋଣ ଆବେଦନ ଏବଂ ଗ୍ରାହକ ପୋର୍ଟାଲ ଆରମ୍ଭ କଲୁ, ଯାହା ସୁଲଭତାକୁ ବୃଦ୍ଧି କଲା।"
+      }
+    },
+    "gallery": {
+      "title": "ଆମର ଇତିହାସ ଚିତ୍ରରେ",
+      "image1": { "alt": "ମୁମ୍ବାଇରେ ପ୍ରଥମ ଶାଖାର ଉଦ୍ଘାଟନ" },
+      "image2": { "alt": "୨୦୧୫ରେ ଜାତୀୟ ଆର୍ଥିକ ପୁରସ୍କାର ଗ୍ରହଣ" },
+      "image3": { "alt": "୨୦୨୦ରେ ଗ୍ରାହକ ପ୍ରଶଂସା କାର୍ଯ୍ୟକ୍ରମ" }
+    },
+    "mission": {
+      "title": "ଆମର ମିଶନ ଏବଂ ମୂଲ୍ୟ",
+      "value1": {
+        "title": "ବିଶ୍ୱାସ",
+        "description": "ପାରଦର୍ଶୀତା ଏବଂ ବିଶ୍ୱସନୀୟତା ମାଧ୍ୟମରେ ଦୀର୍ଘକାଳୀନ ସମ୍ପର୍କ ଗଢିବା।"
+      },
+      "value2": {
+        "title": "ଗ୍ରାହକ କେନ୍ଦ୍ରୀୟ",
+        "description": "ଅନୁକୂଳିତ ସମାଧାନ ସହିତ ଗ୍ରାହକଙ୍କ ଆବଶ୍ୟକତାକୁ ପ୍ରାଥମିକତା ଦେବା।"
+      },
+      "value3": {
+        "title": "ନବସୃଜନ",
+        "description": "ନିରବଚ୍ଛିନ୍ନ ଆର୍ଥିକ ସେବା ପ୍ରଦାନ ପାଇଁ ପ୍ରଯୁକ୍ତିବିଦ୍ୟାକୁ ଆପଣାଇବା।"
+      }
+    },
+    "stats": {
+      "title": "ଆମର ପ୍ରଭାବ",
+      "customers": { "value": "୧୦ ଲକ୍ଷ+", "label": "ସେବା ପାଇଥିବା ଗ୍ରାହକ" },
+      "branches": { "value": "୧୦୦+", "label": "ଦେଶବ୍ୟାପୀ ଶାଖା" },
+      "loans": { "value": "୫ ଲକ୍ଷ+", "label": "ବଣ୍ଟିତ ଋଣ" }
+    },
+    "history": {
+    "title": "ଆମର ଯାତ୍ରା",
+    "founding": {
+      "year": "2023",
+      "title": "ୟୁନିଗୋଲ୍ଡର ପ୍ରତିଷ୍ଠା",
+      "description": "ଓଡିଶାର ଲୋକଙ୍କୁ ସହଜ ସୁନା ଋଣ ପ୍ରଦାନ କରିବାର ଲକ୍ଷ୍ୟ ନେଇ ୟୁନିଗୋଲ୍ଡ ଫାଇନାନ୍ସ କମ୍ପାନୀ ସ୍ଥାପିତ ହୋଇଥିଲା। ଆମର ପ୍ରଥମ ଶାଖା ଭୁବନେଶ୍ୱରରେ ଏକ ଛୋଟ ଡେଡିକେଟେଡ୍ ପେସାଦାର ଦଳ ଦ୍ୱାରା ଖୋଲାଯାଇଥିଲା।"
+    },
+    "milestone1": {
+      "year": "2024",
+      "title": "ପ୍ରଥମ ପ୍ରମୁଖ ମାଇଲଖୁଣ୍ଟ",
+      "description": "ସୁନା ଋଣରେ ₹100 କୋଟିର ଆଙ୍କ ପାର କରିଥିଲେ। ଓଡିଶା ବ୍ୟାପୀ 5 ଟି ଶାଖା ବିସ୍ତାର କରି ସୁନା ଋଣରେ ଏକ ବିଶ୍ୱସନୀୟ ନାମ ହୋଇଥିଲା।"
+    },
+    "expansion": {
+      "year": "2024",
+      "title": "ରାଜ୍ୟବ୍ୟାପୀ ବିସ୍ତାର",
+      "description": "ନମନୀୟ ପରିଶୋଧ ବିକଳ୍ପ ସହିତ ଆମର ନବୀନ ସୁନା ଋଣ ଉତ୍ପାଦ ଆରମ୍ଭ କରିଥିଲେ। ଓଡିଶାର ସମସ୍ତ 30 ଜିଲ୍ଲାରେ ବିସ୍ତାର କରିଥିଲେ।"
+    },
+    "present": {
+      "year": "ବର୍ତ୍ତମାନ",
+      "title": "ଅଗ୍ରଣୀ ସୁନା ଋଣ ପ୍ରଦାନକାରୀ",
+      "description": "ଆଜି, ୟୁନିଗୋଲ୍ଡ 50ରୁ ଅଧିକ ଶାଖା ସହିତ ଓଡିଶାର ସବୁଠାରୁ ବିଶ୍ୱସନୀୟ ସୁନା ଋଣ କମ୍ପାନୀ। ଆମେ ଆମର ମୂଳ ମୂଲ୍ୟବୋଧକୁ ବଜାୟ ରଖିବା ସହିତ ଗ୍ରାହକ-କେନ୍ଦ୍ରିତ ଉତ୍ପାଦ ସହିତ ନବୀନତା ଜାରି ରଖିଛୁ।"
+    },
+    "achievements": "ଆମର ସାଧନା",
+    "branches": "ଓଡିଶାରେ ଶାଖାଗୁଡିକ",
+    "customers": "ସନ୍ତୁଷ୍ଟ ଗ୍ରାହକ",
+    "loans": "ସୁନା ଋଣ ବିତରଣ"
+  }
                  
 }
