--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -726,12 +726,26 @@
         "description": "ऑनलाइन ऋण आवेदन और ग्राहक पोर्टल शुरू किए, जिससे पहुंच में वृद्धि हुई।"
       }
     },
-    "gallery": {
-      "title": "हमारा इतिहास चित्रों में",
-      "image1": { "alt": "मुंबई में पहली शाखा का उद्घाटन" },
-      "image2": { "alt": "2015 में राष्ट्रीय वित्त पुरस्कार प्राप्त करना" },
-      "image3": { "alt": "2020 में ग्राहक प्रशंसा कार्यक्रम" }
-    },
+    
+  "gallery": {
+    "title": "विश्वास और सेवा की गैलरी",
+    "subtitle": "ग्राहक सेवा, सामुदायिक भागीदारी और संचालन में उत्कृष्टता की हमारी यात्रा पर एक नज़र डालें।",
+    "officeOpening": "कार्यालय उद्घाटन समारोह",
+    "teamRetreat": "टीम रिट्रीट",
+    "awardCeremony": "पुरस्कार समारोह",
+    "clientEvent": "ग्राहक सहभागिता कार्यक्रम",
+    "charityWork": "चैरिटी और सामुदायिक कार्य",
+    "newProduct": "नया उत्पाद लॉन्च"
+  },
+  "categories": {
+    "facilities": "सुविधाएं",
+    "events": "इवेंट्स",
+    "achievements": "उपलब्धियां",
+    "csr": "सीएसआर",
+    "products": "उत्पाद"
+  }
+
+,
     "mission": {
       "title": "हमारा मिशन और मूल्य",
       "value1": {
