--- a/src/i18n/locales/or.json
+++ b/src/i18n/locales/or.json
@@ -726,12 +726,25 @@
         "description": "ଅନଲାଇନ ଋଣ ଆବେଦନ ଏବଂ ଗ୍ରାହକ ପୋର୍ଟାଲ ଆରମ୍ଭ କଲୁ, ଯାହା ସୁଲଭତାକୁ ବୃଦ୍ଧି କଲା।"
       }
     },
-    "gallery": {
-      "title": "ଆମର ଇତିହାସ ଚିତ୍ରରେ",
-      "image1": { "alt": "ମୁମ୍ବାଇରେ ପ୍ରଥମ ଶାଖାର ଉଦ୍ଘାଟନ" },
-      "image2": { "alt": "୨୦୧୫ରେ ଜାତୀୟ ଆର୍ଥିକ ପୁରସ୍କାର ଗ୍ରହଣ" },
-      "image3": { "alt": "୨୦୨୦ରେ ଗ୍ରାହକ ପ୍ରଶଂସା କାର୍ଯ୍ୟକ୍ରମ" }
-    },
+    
+  "gallery": {
+    "title": "ଭରସା ଓ ସେବାର ଗ୍ୟାଲେରୀ",
+    "subtitle": "ଗ୍ରାହକ ସେବା, ସମୁଦାୟ ଅଂଶଗ୍ରହଣ ଓ କାର୍ଯ୍ୟନିଷ୍ଠା ଯାତ୍ରାର ଏକ ଦୃଶ୍ୟ ଦେଖନ୍ତୁ।",
+    "officeOpening": "କାର୍ଯ୍ୟାଳୟ ଉଦ୍‌ଘାଟନ ଅନୁଷ୍ଠାନ",
+    "teamRetreat": "ଟିମ୍‌ ରିଟ୍ରିଟ୍",
+    "awardCeremony": "ପୁରସ୍କାର ସମାରୋହ",
+    "clientEvent": "ଗ୍ରାହକ ସମ୍ମିଳନୀ",
+    "charityWork": "ଦାନ ଓ ସମୁଦାୟ କାର୍ଯ୍ୟ",
+    "newProduct": "ନୂତନ ପ୍ରସ୍ତୁତି ଲଞ୍ଚ"
+  },
+  "categories": {
+    "facilities": "ସୁବିଧା",
+    "events": "ଇଭେଣ୍ଟ୍‌ସ୍",
+    "achievements": "ଉପଲବ୍ଧି",
+    "csr": "ସିଏସଆର୍",
+    "products": "ପ୍ରସ୍ତୁତି"
+  }
+,
     "mission": {
       "title": "ଆମର ମିଶନ ଏବଂ ମୂଲ୍ୟ",
       "value1": {
